--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
-    rel="stylesheet" 
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
-    crossorigin="anonymous">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Code Quiz - Christina</title>
 </head>
+
 <body>
     <section class="container">
         <div class="row">
-            <div class="header">
-                <h1 class="center">Code Quiz</h1>
+            <div class="center" id="header">
+                <h1>Christina's Code Quiz</h1>
             </div>
             <div class="row">
-                <a href="#highscores">See High Scores</a>
-                <div class="timer"></div>
+                <a href="#highscores" class="col-sm-9">See High Scores</a>
+                <div class="col-sm-3" id="timer">Timer: </div>
             </div>
         </div>
     </section>
+    <div class="center" id="startOnly">
+        <button class="btn btn-primary btn-lg" id="startButton">START THE QUIZ!</button>
+        <p>Warning: Be ready! This quiz is timed, and if you get a question wrong, your remaining time decreases!</p>
+    </div>
+    <section class="container" id="quizWindow">
+        <div class="row" id="question"></div>
+        <div class="row">
 
+        </div>
+    </section>
 
+<script src="script.js" type="text/javascript"></script>
 </body>
+
 </html>
