--- a/index.html
+++ b/index.html
@@ -25,15 +25,23 @@
 
     <div class="center" id="startOnly">
         <button class="btn btn-primary btn-lg" id="startButton">START THE QUIZ!</button>
-        <p>Warning: Be ready! This quiz is timed, and if you get a question wrong, your remaining time decreases!</p>
+        <p>Warning: Be ready! This quiz is timed, and if you get a question wrong, you lose another 10 seconds!</p>
     </div>
 
-    <div class="container center" id="quizWindow" style="visibility: hidden">
-        <div class="row" id="question">Test</div>
-        <button class="row btn btn-primary" type="button" id="answerA">A</button><br>
-        <button class="row btn btn-primary" type="button" id="answerB">B</button><br>
-        <button class="row btn btn-primary" type="button" id="answerC">C</button><br>
-        <button class="row btn btn-primary" type="button" id="answerD">D</button><br>
+    <div class="container center" id="quizWindow" style="display: none;">
+        <div id="answerDiv"></div><br>
+        <h4 class="row" id="question">Test</h4>
+        <button class="btn btn-warning btn-lg" type="button" id="answerA">A</button><br><br>
+        <button class="btn btn-warning btn-lg" type="button" id="answerB">B</button><br><br>
+        <button class="btn btn-warning btn-lg" type="button" id="answerC">C</button><br><br>
+        <button class="btn btn-warning btn-lg" type="button" id="answerD">D</button>
+    </div>
+
+    <div id="scoreWindow" class="container" style="display: none;">
+        <h3 id="userScore"></h3>
+        <input id="userInitials" type="text">
+        <button id="saveUser" class="btn btn-primary">Save User Initials</button>
+        <div id="displayInitials"></div>
     </div>
 
 <script src="script.js" type="text/javascript"></script>
