Added timer and score saver

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="scoreWindow" class="container" style="display: none;">
         <h3 id="userScore"></h3>
         <input id="userInitials" type="text">
-        <button id="saveUser" class="btn btn-primary">Save User Initials</button>
+        <button id="saveUser" class="btn btn-primary">Submit Initials</button>
         <div id="displayInitials"></div>
     </div>
 
