Fixed some of css and display of data

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="container header">
         <div class="row">
-            <header class="center" id="header">
+            <header class="center">
                 <h1>Christina's Code Quiz</h1>
             </header>
             <div class="row">
@@ -23,6 +23,8 @@
             </div>
         </div>
     </section>
+
+    <br><br>
 
     <div class="center" id="startOnly">
         <button class="btn btn-primary btn-lg" id="startButton">START THE QUIZ!</button>
